# DHOS-Reborn

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  limine.conf  notes.md
.github/workflows/: build.yml
Applications/: CMakeLists.txt
Applications/Bootstrap/: CMakeLists.txt  CommonLibRuntime.cpp  RuntimeStubs.cpp  linker.ld  main.cpp
CommonLib/: Arc.cppm  Arc.h  Array.cppm  Array.h  ArrayList.cppm  ArrayList.h  Atomic.cppm  Atomic.h  BitArray.cppm  BitList.cppm  Box.cppm  Box.h  CMakeLists.txt  CString.cppm  Color.h  CommonLib.cppm  Error.cppm  Error.h  FixedString.cppm  Flags.cppm  Function.cppm  Function.h  HashMap.cppm  HashMap.h  InitializerList.cppm  InitializerList.h  Iterator.cppm  Iterator.h  LinkedList.cppm  LinkedList.h  Math.cppm  Math.h  Option.cppm  Option.h  Platform.cppm  Platform.h  Queue.cppm  Range.cppm  Range.h  Rc.cppm  (+21 more)
Katline/: Bootstrap.cppm  CMakeLists.txt  Color.cppm  CommonLibRuntime.cpp  CxxAbiStubs.cpp  Debug.cpp  Debug.cppm  Debug.h  DebugImpl.cppm  DebugSink.cppm  Font.cppm  HandleManager.cppm  Katline.cpp  Katline.cppm  Katline.h  KernelSymbols.cppm  Logo.cppm  Math.cppm  Panic.cppm  Runtime.cppm  Sync.cppm  linker.ld
Katline/API/: CMakeLists.txt  IPC.cppm  KatlineAPI.cppm  SyscallCalls.cppm  SyscallContract.cppm  SyscallList.def  Syscalls.cppm  Types.cppm
Katline/Arch/: ACPI.cpp  ACPI.cppm  ACPI.h  CPU.cppm  Constants.cppm  GDT.cppm  IDT.cpp  IDT.cppm  IDT.h  Interrupts.cpp  Interrupts.cppm  LimineStart.cpp  LimineStart.cppm  Paging.cppm  RSDP.cpp  RSDP.cppm  RSDP.h  Scheduler.cppm  Thread.cppm  X2APIC.cppm
Katline/Controllers/: FramebufferController.cpp  FramebufferController.cppm  FramebufferController.h  IO.cppm  IO.h  SerialController.cpp  SerialController.cppm  SerialController.h
Katline/Memory/: FrameAllocator.cppm  Heap.cpp  Heap.cppm  Heap.h  MemoryData.cppm  MemoryData.h  MemoryManager.cpp  MemoryManager.cppm  MemoryManager.h  MemoryObject.cppm  NewDelete.cpp  ProcessMappings.cppm
Katline/Syscalls/: DebugU64.cppm  Dispatch.cppm  Exit.cppm  GetPid.cppm  GetProcessInfo.cppm  GetTid.cppm  HandleClose.cppm  HandleDuplicate.cppm  IPCReceive.cppm  IPCSend.cppm  KernelContract.cppm  MemoryCreate.cppm  MemoryMap.cppm  MemoryMapHelpers.cppm  MemoryUnmap.cppm  ProcessCreate.cppm  ProcessCurrent.cppm  ProcessGrantCapabilities.cppm  ProcessMemoryMap.cppm  ProcessMemoryUnmap.cppm  SyscallABI.cppm  SyscallTypes.cppm  Syscalls.cppm  ThreadCreate.cppm  ThreadCurrent.cppm  ThreadStart.cppm  Yield.cppm
Libraries/: CMakeLists.txt
Libraries/LibC/: CMakeLists.txt
Libraries/LibC/include/: string.h
Libraries/LibC/src/: String.cppm
Libraries/LibRuntime/: CMakeLists.txt  CommonLibRuntime.cpp  OperatorNewDelete.cpp  RT.cpp
Util/: BuildCDROMImage.sh  BuildDiskImage.sh  GenerateBootstrapEntry.py  GenerateKernelSymbols.py  Run.sh
cmake/: x86_64-elf-clang.cmake
cxxstubs/include/: cstring  initializer_list  new  optional  string.h
